--- a/public/GENERAL/sampleModule/tmpl/sampleModule.html
+++ b/public/GENERAL/sampleModule/tmpl/sampleModule.html
@@ -1,5 +1,4 @@
 
-this is the default templateFile
 
 <!-- Folosirea variabilelor si metodelor din cadrul obiectului curent
     La care ne referim cu $o->varName
@@ -12,12 +11,14 @@ this is the default templateFile
 
     <!--$this = obiectul principal core -->
     <p>{$this->var4}</p>
+    <!--The same with-->
+    <p>{$o->C->var4}</p>
 
     <!--Apelarea metodelor-->
     <p>".$o->methName()."</p>
     <p>".$this->methName()."</p>
 
-    
+
 </div>
 
 <!--Iterarea prin array-uri  - multidemsionale (ex: recorduri provenite din BD)
@@ -47,12 +48,12 @@ this is the default templateFile
 
             </div>
         "
-
+        ,'',$o
     )."
 
 </div>
 
-<!-- Iterarea prin array-uri multidensionale
+<!-- Iterarea prin array-uri unidensionale
 
      renderDisplay_Items_uniDimens($items, $tmplStr='', $tmplPath='', &$obj='')
 
@@ -69,7 +70,7 @@ this is the default templateFile
 
 
 
-<!-- Integrarea de templateuri ale altui obiect
+<!-- Integrarea de templateuri ale altui obiect / sau ale aceluiasi obiect
 
     renderDisplay_fromObj(&$obj, $tmplStr='', $tmplPath='')
             - ase folosii parametrul de tmplPath al metodei
@@ -93,3 +94,69 @@ this is the default templateFile
 
 
  </div>
+
+
+<div>
+
+    ".( $this->admin
+        ?  $this->renderDisplay_fromObj(
+             $o,
+             '',
+            'MODELS/objName/tmpl/templateFile.html')
+
+        : ""
+
+    )."
+</div>
+
+ <!--==========================[ FOLOSIREA EDITmode]=====================================-->
+ <!--ENTS-->
+<div class='allENTS allNews' id='allNews_{$o->LG}'>
+    ".$this->renderDisplay_Items(
+        $o->news,
+        "
+            <div class='ENT news' id='news_{~ao->idNews}_{~o->lang}'>
+                <p>Title :
+                    <a href='index.php?idC={~o->idC}&idT={~o->idT}&idNews={~ao->idNews}'>
+                        <span class='EDtxt titleNews'>{~ao->title}</span>
+                    </a>
+                </p>
+                <p>Lead :  <span class='EDtxa leadNews'>{~ao->lead}</span></p>
+                <!--Conditionare concatenata-->
+                `.(
+                    ~ao->pictureUrl
+                    ? `<p>Picture :
+                            <a href='{~ao->newsHref}'>
+                                <img src='{~ao->pictureUrl}'>
+                            </a>
+                       </p>`
+                    : `There is no picture`
+                ).`
+
+            </div>
+        "
+        ,'',$o
+
+    )."
+
+</div>
+
+<!--SING-->
+<div class='SING sgNews' id='news_0_{$o->lang}'>
+
+    <p>
+        <span class='ATmpl'> title</span>
+        <span class='EDtxt newsTitle'> {$o->title}</span>
+    </p>
+
+    <p>
+        <span class='ATmpl'> lead</span>
+        <span class='EDtxa newsLead'> {$o->lead}</span>
+    </p>
+
+    <div>
+        <span class='ATmpl'> Content </span>
+        <div class='EDeditor newsContent'>{$o->content}</div>
+    </div>
+
+</div>
