--- a/public/assets/orbit-1.2.3/orbit-1.2.3/demo/demo.html
+++ b/public/assets/orbit-1.2.3/orbit-1.2.3/demo/demo.html
@@ -44,7 +44,9 @@
 	
 	<div class="container">
 		<h4>ZURB's Orbit Slider</h4>
-		<a href="http://www.zurb.com/playground/orbit-jquery-image-slider">View Docs + Playground for Orbit</a>
+		<a href="http://www.zurb.com/playground/orbit-jquery-image-slider">
+            View Docs + Playground for Orbit
+        </a>
 	
 	
 	
@@ -64,7 +66,11 @@ THE ACTUAL ORBIT SLIDER CONTENT
 			<img src="dummy-images/features.jpg"  />
 		</div>
 		<!-- Captions for Orbit -->
-		<span class="orbit-caption" id="htmlCaption"><strong>I'm A Badass Caption:</strong> I can haz <a href="#">links</a>, <em>style</em> or anything that is valid markup :)</span>
+		<span class="orbit-caption" id="htmlCaption">
+            <strong>
+                I'm A Badass Caption:</strong>
+               I can haz <a href="#">links</a>, <em>style</em> or anything that is valid markup :)
+        </span>
 		
 		
 		
