--- a/public/GENERAL/sampleModule/tmpl/sampleModule.html
+++ b/public/GENERAL/sampleModule/tmpl/sampleModule.html
@@ -117,7 +117,7 @@
         "
             <div class='ENT news' id='news_{~ao->idNews}_{~o->lang}'>
                 <p>Title :
-                    <a href='index.php?idC={~o->idC}&idT={~o->idT}&idNews={~ao->idNews}'>
+                    <a href='index.php?idC={~o->idNode}&idT={~o->idTree}&idNews={~ao->idNews}'>
                         <span class='EDtxt titleNews'>{~ao->title}</span>
                     </a>
                 </p>
