--- a/public/GENERAL/user/tmpl/account.html
+++ b/public/GENERAL/user/tmpl/account.html
@@ -8,6 +8,10 @@
     <input type='hidden' name='modName' value='user'>
 
     <input type='submit' name='deleteAccount' value='delete account'>
-    <input type='button' name='changePassword' value='change password'>
-    <input type='button' name='inviteMember' value='invite member'>
+    <input type='button' name='changePassword' value='change password'
+            onclick = \"ivyMods.user.popup('".FW_PUB_URL."','changePass' , 'Change Password'); return false;\">
+
+    <input type='button' name='inviteMember' value='invite member'
+           onclick = \"ivyMods.user.popup('".FW_PUB_URL."','inviteMember' , 'Invite Member'); return false;\" >
+
 </form>
