Session handling, account features, fixed sprites

--- a/public/GENERAL/user/tmpl/inviteMember.html
+++ b/public/GENERAL/user/tmpl/inviteMember.html
@@ -1,5 +1,5 @@
-<form action='' method=''  style='text-align: center;'>
-    <input type='text' name='emailInvite' placeholder='email'  class='ivy-light'  />
+<form action='' method='post'  style='text-align: center;'>
+    <input type='text' name='email' placeholder='email'  class='ivy-light'  />
     <br>
 
     <input type='hidden' name='modName' value='user' />
