--- a/public/GENERAL/user/tmpl/account.html
+++ b/public/GENERAL/user/tmpl/account.html
@@ -4,14 +4,20 @@
 
     <input type='hidden' name='uid' value='{$o->uid}'>
 
+    <!--
     <input type='hidden' name='methName' value='deleteAccount'>
     <input type='hidden' name='modName' value='user'>
 
-    <input type='submit' name='deleteAccount' value='delete account'>
-    <input type='button' name='changePassword' value='change password'
-            onclick = \"ivyMods.user.popup('".FW_PUB_URL."','changePass' , 'Change Password'); return false;\">
+    <input type='submit' name='deactivateAccount' value='deactivate me'>
+    -->
 
-    <input type='button' name='inviteMember' value='invite member'
-           onclick = \"ivyMods.user.popup('".FW_PUB_URL."','inviteMember' , 'Invite Member'); return false;\" >
+    <input type='button' name='deactivateAccount' value='deactivate me'
+    onclick = \"ivyMods.user.popup('".FW_PUB_URL."','deactivate', 'Deactivate my account', '".$o->uid."'); return false;\">
+
+    <input type='button' name='changePassword' value='change password'
+    onclick = \"ivyMods.user.popup('".FW_PUB_URL."','changePass', 'Change Password', '".$o->uid."'); return false;\">
+
+    <input type='button' name='inviteUser' value='invite'
+           onclick = \"ivyMods.user.popup('".FW_PUB_URL."','inviteMember', 'Invite Member'); return false;\" >
 
 </form>
