--- a/public/GENERAL/user/tmpl/loginform.html
+++ b/public/GENERAL/user/tmpl/loginform.html
@@ -1,29 +1,52 @@
  <div id='loginPopup' style='text-align: center;'>
-     <!-- Form Login  -->
 
-    <form id='loginForm' action='/' method='post'>
-        <input name='loginName' placeholder='Username' type='text'  class='ivy-light'  />
-        <br>
-        <input name='password' placeholder='Password' type='password' class='ivy-light'  />
-        <br>
-        <br>
-        <input type='hidden' name='login' value='CauthManager' />
+     <div id="popup-body">
+         <div id="popup-left">
+             <p id="p-login">You need to authenticate in order to access administrative
+             features.</p>
+         <p id="p-recover" class="hidden">Fill in your email address to begin 
+             the recovery process.</p>
+         </div>
+         <div id="popup-right">
+             <!-- Form Login  -->
 
-        <input type='button' name='forgotPassword' value='forgot password' class='ivy'
-                onclick=' ivyMods.user.forgotPassword(); return false;'  />
-        <input type='submit' name='logSubm' value='login' class='ivy' />
+            <form id='loginForm' action='/' method='post'>
+                <input name='loginName' placeholder='Username' type='text'
+                    class='ivy-light'  />
+                <br>
+                <input name='password' placeholder='Password' type='password' 
+                    class='ivy-light'  />
+                <br>
+                <input type='hidden' name='login' value='CauthManager' />
+                <input type='submit' name='logSubm' value='Log in' class='ivy' />
+            </form>
 
-    </form>
-     <!-- Form Recover password -->
-     <form action='' method='post' id='recover-pass' class='hidden' >
-         <br>
-         <input type='button' name='login' value='login' class='ivy'
-                        onclick=' ivyMods.user.loginForm(); return false;'  />
-         <input type='submit' name='forgotPassword' value='forgot password' class='ivy' />
+             <!-- Form Recover password -->
+             <form action='' method='post' id='recover-pass' class='hidden' >
+                <br>
+                <input type='text' name='email' value='' placeholder='email' 
+                    class='ivy-light email'>
+                    <br />
+                <input type='submit' name='forgotPassword'
+                    value='OK' class='ivy' />
+                <input type='hidden' name='modName' value='user' />
+                <input type='hidden' name='methName' value='forgotPassword' />
 
+                <br /> <br /> 
+                <a href="#" class='ivy pull-left' onclick='ivyMods.user.loginForm(); return false;'>
+                    Back to the login form
+                </a>
+             </form>
+        </div>
+     </div>
+     <div class="clearfix"></div>
+     <div id="popup-footer">
+         <p>
+            If you forgot your password, 
+             <a href="#" onclick=' ivyMods.user.forgotPassword(); return false;'>
+                 click here
+             </a> to access the password recovery form.
+         </p>
+     </div>
 
-         <input type='hidden' name='modName' value='user' />
-         <input type='hidden' name='methName' value='forgotPassword' />
-         <input type='text' name='email' value='' placeholder='email' class='ivy-light'>
-     </form>
 </div>
