Password recovery feature

--- a/public/GENERAL/user/tmpl/loginform.html
+++ b/public/GENERAL/user/tmpl/loginform.html
@@ -24,13 +24,13 @@
              <!-- Form Recover password -->
              <form action='' method='post' id='recover-pass' class='hidden' >
                 <br>
-                <input type='text' name='email' value='' placeholder='email' 
+                <input type='text' name='loginName' value='' placeholder='email or username' 
                     class='ivy-light email'>
                     <br />
                 <input type='submit' name='forgotPassword'
                     value='OK' class='ivy' />
                 <input type='hidden' name='modName' value='user' />
-                <input type='hidden' name='methName' value='forgotPassword' />
+                <input type='hidden' name='methName' value='recoverPassword' />
 
                 <br /> <br /> 
                 <a href="#" class='ivy pull-left' onclick='ivyMods.user.loginForm(); return false;'>
